[cs-ui] CSLookup bugfixes & CSFieldErrorMsg - added word wrap to message
CSLookup bugfixes:
-error 'Cannot read property 'scrollTop' of null'  while dropdown is closed and arrow keys are pressed
-misalignment of search icon when error message is rendered
-fixed closing dropdown on position: top and align: right

--- a/cs-ui-components/src/sass/components/_cs-field-error-msg.scss
+++ b/cs-ui-components/src/sass/components/_cs-field-error-msg.scss
@@ -2,11 +2,12 @@
 	font-size: 0.6875rem;
 	display: block;
 	margin-block-start: 0.25rem;
-	@include sc(--cs-input-error-c);
 	height: auto;
 	max-height: 0;
 	overflow: hidden;
 	animation: animateHeight 1s forwards;
+	word-break: break-all;
+	@include sc(--cs-input-error-c);
 }
 
 @keyframes animateHeight {
